--- a/src/app/core/templates/games-statuses-panel/games-statuses-panel.component.html
+++ b/src/app/core/templates/games-statuses-panel/games-statuses-panel.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
   <mat-button-toggle-group
+    *ngIf="!loading"
     (change)="goToItem($event.value)"
     #group="matButtonToggleGroup"
     [value]="typeToggle"
