--- a/src/app/sports/basketball/basketball-live/basketball-live.component.html
+++ b/src/app/sports/basketball/basketball-live/basketball-live.component.html
@@ -1,4 +1,4 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 <div class="tables">
-  <app-table *ngFor="let table of tables | keyvalue" [name]="table.key" [columns]="table.value"></app-table>
+  <app-table *ngFor="let market of markets" [market]="market"></app-table>
 </div>
