--- a/src/app/core/templates/table/table.component.scss
+++ b/src/app/core/templates/table/table.component.scss
@@ -9,7 +9,6 @@
     text-align: center;
   }
 
-
   tr {
     height: 25px;
   }
@@ -31,7 +30,7 @@
   }
 
   .header {
-    width: 200px;
+    width: auto;
     font-size: 13px;
     text-align: center;
     padding: 5px 0;
