--- a/src/app/core/templates/table/table.component.html
+++ b/src/app/core/templates/table/table.component.html
@@ -1,9 +1,12 @@
 <div class="wrapper">
   <div class="header">{{market.name}}</div>
   <table mat-table [dataSource]="market.odds" class="table">
-    <ng-container matColumnDef="time_str">
-      <th mat-header-cell *matHeaderCellDef>Time</th>
-      <td mat-cell *matCellDef="let element"> {{element.time_str}} </td>
+    <ng-container matColumnDef="game_time">
+      <th mat-header-cell *matHeaderCellDef>
+        Game
+        Time
+      </th>
+      <td mat-cell *matCellDef="let element"> {{element.game_time}} </td>
     </ng-container>
     <ng-container matColumnDef="ss">
       <th mat-header-cell *matHeaderCellDef>Score</th>
@@ -23,7 +26,12 @@
     </ng-container>
     <ng-container matColumnDef="rating">
       <th mat-header-cell *matHeaderCellDef>Rating</th>
-      <td mat-cell *matCellDef="let element"> {{element.rating}} </td>
+      <td mat-cell [style]="{ 'background-color': ' rgba(' + getRatingColor(element.rating) + ')'}"
+          *matCellDef="let element"> {{element.rating}} </td>
+    </ng-container>
+    <ng-container matColumnDef="world_time">
+      <th mat-header-cell *matHeaderCellDef>Time</th>
+      <td mat-cell *matCellDef="let element"> {{element.world_time * 1000 | date: 'd/MM\nHH:mm:ss'}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayRows"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: displayRows"></tr>
