--- a/src/app/sports/football/football-list/football-list.component.html
+++ b/src/app/sports/football/football-list/football-list.component.html
@@ -1,32 +1,37 @@
 <app-games-statuses-panel
-  [sportId]="sportID"
   [sport]="'football'"
-  (typeEmitter)="typeToggleChange($event)"
 ></app-games-statuses-panel>
-<ng-container *ngIf="games">
-  <div *ngIf="games.length === 0" class="error">no games now</div>
-  <mat-list class="list">
-    <mat-list-item *ngFor="let game of games" (click)="openGame(game.id)">
-      <div class="game">
-        <div *ngIf="game.time; else notTime" class="time">
-          {{game.time.tm}}
+<ng-container *ngIf="!loading; else loadingTemp">
+  <ng-container *ngIf="games">
+    <div *ngIf="games.length === 0" class="error">no games now</div>
+    <mat-list class="list">
+      <mat-list-item *ngFor="let game of games" (click)="openGame(game.id)">
+        <div class="game">
+          <div class="time">
+            <div *ngIf="this.typeOfGames == 'live'; else gameTime">
+              {{game.time.tm}}
+            </div>
+            <ng-template #gameTime>
+              {{+game.startTime * 1000 | date: 'd/MM HH:mm'}}
+            </ng-template>
+          </div>
+          <div class="league">
+            {{game.league}}:
+          </div>
+          <div class="home">
+            {{game.home}}
+          </div>
+          <div class="scores">
+            {{game.scores}}
+          </div>
+          <div class="away">
+            {{game.away}}
+          </div>
         </div>
-        <ng-template #notTime class="time">
-          ---
-        </ng-template>
-        <div class="league">
-          {{game.league}}:
-        </div>
-        <div class="home">
-          {{game.home}}
-        </div>
-        <div class="scores">
-          {{game.scores}}
-        </div>
-        <div class="away">
-          {{game.away}}
-        </div>
-      </div>
-    </mat-list-item>
-  </mat-list>
+      </mat-list-item>
+    </mat-list>
+  </ng-container>
 </ng-container>
+<ng-template #loadingTemp>
+  <mat-spinner [diameter]="50"></mat-spinner>
+</ng-template>
