--- a/src/app/sports/football/football-list/football-list.component.html
+++ b/src/app/sports/football/football-list/football-list.component.html
@@ -22,7 +22,12 @@
             {{game.home}}
           </div>
           <div class="scores">
-            {{game.scores}}
+            <div *ngIf="this.typeOfGames == 'live'; else vs">
+              {{game.scores}}
+            </div>
+            <ng-template #vs>
+              {{vs}}
+            </ng-template>
           </div>
           <div class="away">
             {{game.away}}
