--- a/src/app/sports/football/football-list/football-list.component.html
+++ b/src/app/sports/football/football-list/football-list.component.html
@@ -16,10 +16,12 @@
             </ng-template>
           </div>
           <div class="league">
-            {{game.league}}:
+            <img width="20px" height="15px" src="https://assets.betsapi.com/v2/images/flags/{{game.league.cc}}.svg"
+                 alt="">
+            {{game.league.name}}:
           </div>
           <div class="home">
-            {{game.home}}
+            {{game.home.name}}
           </div>
           <div class="scores">
             <div *ngIf="this.typeOfGames == 'live'; else vs">
@@ -30,7 +32,7 @@
             </ng-template>
           </div>
           <div class="away">
-            {{game.away}}
+            {{game.away.name}}
           </div>
         </div>
       </mat-list-item>
