--- a/src/app/core/templates/table/table.component.html
+++ b/src/app/core/templates/table/table.component.html
@@ -18,7 +18,7 @@
     </ng-container>
     <ng-container matColumnDef="row2">
       <th mat-header-cell *matHeaderCellDef>Total</th>
-      <td mat-cell *matCellDef="let element"> {{element.row2}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.row2 || '-'}} </td>
     </ng-container>
     <ng-container matColumnDef="row3">
       <th mat-header-cell *matHeaderCellDef>Under</th>
@@ -27,7 +27,7 @@
     <ng-container matColumnDef="rating">
       <th mat-header-cell *matHeaderCellDef>Rating</th>
       <td mat-cell [style]="{ 'background-color': ' rgba(' + getRatingColor(element.rating) + ')'}"
-          *matCellDef="let element"> {{element.rating}} </td>
+          *matCellDef="let element"> {{element.rating || '-'}} </td>
     </ng-container>
     <ng-container matColumnDef="world_time">
       <th mat-header-cell *matHeaderCellDef>Time</th>
