--- a/src/app/core/templates/table/table.component.scss
+++ b/src/app/core/templates/table/table.component.scss
@@ -1,19 +1,26 @@
 
 .wrapper {
-  margin-top: 30px;
+  margin: 30px;
 
   td, th {
     font-size: 10px;
-    width: 40px;
     padding: 0;
     text-align: center;
   }
 
   tr {
     height: 25px;
+    width: 100%;
   }
 
   table {
+    width: 100%;
+
+    ::ng-deep tbody {
+      width: 100%;
+    }
+
+    margin: 0 auto;
 
     ::ng-deep tbody {
       tr {
@@ -30,7 +37,8 @@
   }
 
   .header {
-    width: auto;
+    margin: 0 auto;
+    width: 100%;
     font-size: 13px;
     text-align: center;
     padding: 5px 0;
