--- a/src/app/sports/football/football-live/football-live.component.scss
+++ b/src/app/sports/football/football-live/football-live.component.scss
@@ -1,8 +1,9 @@
 .tables {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 
   app-table {
-    margin: 0 15px;
+    width: 30%;
   }
 }
