--- a/src/app/sports/football/football-live/football-live.component.html
+++ b/src/app/sports/football/football-live/football-live.component.html
@@ -1,4 +1,5 @@
 <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+<app-game-info-header [game]="game" [sport]="'football'"></app-game-info-header>
 <div class="tables">
-  <app-table *ngFor="let market of markets" [market]="market"></app-table>
+  <app-table *ngFor="let market of game.markets" [market]="market"></app-table>
 </div>
