add mobile template for list

--- a/src/app/core/templates/game-info-header/game-info-header.component.html
+++ b/src/app/core/templates/game-info-header/game-info-header.component.html
@@ -1,7 +1,11 @@
 <div class="info-wrapper">
   <div class="up-line">
     <div class="league">
-      <img width="32px" height="24px" src="https://assets.betsapi.com/v2/images/flags/{{game.league.cc}}.svg" alt="">
+      <img
+        src="https://assets.betsapi.com/v2/images/flags/{{game.league.cc}}.svg"
+        alt=""
+        onerror="this.style.display='none'"
+      >
       <p>{{game.league.name}}</p>
     </div>
     <p class="time">
