--- a/src/app/core/templates/game-info-header/game-info-header.component.scss
+++ b/src/app/core/templates/game-info-header/game-info-header.component.scss
@@ -40,6 +40,8 @@
     justify-content: center;
 
     img {
+      width: 40px;
+      height: 30px;
       margin: auto 0;
       margin-right: 10px;
     }
