--- a/src/app/sports/basketball/basketball-list/basketball-list.component.scss
+++ b/src/app/sports/basketball/basketball-list/basketball-list.component.scss
@@ -9,6 +9,12 @@ mat-button-toggle-group, mat-progress-spinner {
 
 .list, .error {
   margin: 10px 20%;
+  @media screen and (max-width: 1400px) {
+    margin: 10px 10%;
+  }
+  @media screen and (max-width: 1080px) {
+    margin: 10px 0;
+  }
 }
 
 .error {
@@ -18,6 +24,9 @@ mat-button-toggle-group, mat-progress-spinner {
 
 ::ng-deep mat-list-item {
   max-height: 30px;
+  @media screen and (max-width: 1080px) {
+    max-height: 50px;
+  }
 
   &:last-child {
     ::ng-deep .mat-list-item-content {
@@ -27,24 +36,46 @@ mat-button-toggle-group, mat-progress-spinner {
 
   ::ng-deep .mat-list-item-content {
     max-height: 30px;
+    @media screen and (max-width: 1080px) {
+      max-height: 50px;
+    }
     padding: 0 !important;
     border-bottom: var(--primary-color) 1px solid;
   }
 }
 
 .game {
+  width: 100%;
   display: flex;
   font-size: 10px;
-  width: 100%;
+  padding: 0 2px;
 
   .time, .scores {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    width: 11%;
-    padding: 0 10px;
+    width: 8%;
+    @media screen and (max-width: 1080px) {
+      width: 12%;
+    }
   }
 
-  .league, .home, .away {
-    width: 26%;
+  .teams {
+    height: 40px;
+    width: 38%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .home, .away, .league {
+    width: 28%;
+    @media screen and (max-width: 1080px) {
+      width: 38%;
+    }
   }
 
   .home {
@@ -55,6 +86,21 @@ mat-button-toggle-group, mat-progress-spinner {
     text-align: left;
   }
 
+  .league {
+    display: flex;
+    align-items: center
+  }
+
+}
+
+p {
+  margin: 0;
+}
+
+img {
+  width: 20px;
+  float: left;
+  height: 15px;
 }
 
 mat-spinner {
