--- a/src/app/core/templates/game-info-header/game-info-header.component.scss
+++ b/src/app/core/templates/game-info-header/game-info-header.component.scss
@@ -6,11 +6,19 @@
 
   .time {
     font-size: 20px;
+
+    @media screen and (max-width: 1080px) {
+      font-size: 15px;
+    }
     margin-left: 20px;
   }
 
   .teams-wrapper {
     font-size: 16px;
+
+    @media screen and (max-width: 1080px) {
+      font-size: 12px;
+    }
 
     .team1 {
       text-align: end;
@@ -37,6 +45,10 @@
 
   .up-line {
     font-size: 20px;
+
+    @media screen and (max-width: 1080px) {
+      font-size: 15px;
+    }
     justify-content: center;
 
     img {
@@ -44,13 +56,23 @@
       height: 30px;
       margin: auto 0;
       margin-right: 10px;
+
+      @media screen and (max-width: 1080px) {
+        font-size: 15px;
+        width: 20px;
+        height: 15px;
+      }
     }
 
     display: flex;
   }
 
   width: 60%;
-  margin: 10px auto;
+
+  @media screen and (max-width: 1080px) {
+    width: 100%;
+  }
+  margin: 10px auto 0 auto;
   padding-bottom: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
 }
