--- a/src/app/core/templates/table/table.component.html
+++ b/src/app/core/templates/table/table.component.html
@@ -24,15 +24,20 @@
       <th mat-header-cell *matHeaderCellDef>Under</th>
       <td mat-cell *matCellDef="let element"> {{element.row3}} </td>
     </ng-container>
+    <ng-container matColumnDef="bot">
+      <th mat-header-cell *matHeaderCellDef>Bot Rating</th>
+      <td mat-cell *matCellDef="let element"> {{element.rating?.bot | number : '1.2-2'}} </td>
+    </ng-container>
     <ng-container matColumnDef="rating">
       <th mat-header-cell *matHeaderCellDef>Rating</th>
-      <td mat-cell [style]="{ 'background-color': ' rgba(' + getRatingColor(element.rating) + ')'}"
-          *matCellDef="let element"> {{element.rating}} </td>
+      <td mat-cell [style]="{ 'background-color': ' rgba(' + getRatingColor(element) + ')'}"
+          *matCellDef="let element"> {{element.rating?.rating | number : '1.2-2'}} </td>
     </ng-container>
     <ng-container matColumnDef="world_time">
       <th mat-header-cell *matHeaderCellDef>Time</th>
-      <td mat-cell *matCellDef="let element"> {{element.world_time * 1000 | date: 'd/MM\nHH:mm:ss'}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.world_time * 1000 | date: 'HH:mm:ss'}} </td>
     </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayRows"></tr>
     <tr mat-row *matRowDef="let myRowData; columns: displayRows"></tr>
   </table>
 </div>
