--- a/src/app/core/templates/table/table.component.html
+++ b/src/app/core/templates/table/table.component.html
@@ -13,24 +13,40 @@
       <td mat-cell *matCellDef="let element"> {{element.ss}} </td>
     </ng-container>
     <ng-container matColumnDef="row1">
-      <th mat-header-cell *matHeaderCellDef>Over</th>
-      <td mat-cell *matCellDef="let element"> {{element.row1}} </td>
+      <th
+        *matHeaderCellDef
+        mat-header-cell
+      >
+        {{market.rowsNames[0]}}</th>
+      <td
+        *matCellDef="let element"
+        mat-cell
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element, 1) + ')'}"
+      > {{element.row1}} </td>
     </ng-container>
     <ng-container matColumnDef="row2">
-      <th mat-header-cell *matHeaderCellDef>Total</th>
-      <td mat-cell *matCellDef="let element"> {{element.row2 || '-'}} </td>
+      <th mat-header-cell *matHeaderCellDef>{{market.rowsNames[1]}}</th>
+      <td
+        *matCellDef="let element"
+        mat-cell
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element, 2) + ')'}"
+      > {{element.row2 || '-'}} </td>
     </ng-container>
     <ng-container matColumnDef="row3">
-      <th mat-header-cell *matHeaderCellDef>Under</th>
-      <td mat-cell *matCellDef="let element"> {{element.row3}} </td>
+      <th mat-header-cell *matHeaderCellDef>{{market.rowsNames[2]}}</th>
+      <td
+        *matCellDef="let element"
+        mat-cell
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element, 3) + ')'}"
+      > {{element.row3}} </td>
     </ng-container>
     <ng-container matColumnDef="bot">
       <th mat-header-cell *matHeaderCellDef>Bot Rating</th>
       <td mat-cell *matCellDef="let element"> {{element.rating?.bot | number : '1.2-2'}} </td>
     </ng-container>
     <ng-container matColumnDef="rating">
-      <th mat-header-cell *matHeaderCellDef>Rating</th>
-      <td mat-cell [style]="{ 'background-color': ' rgba(' + getRatingColor(element) + ')'}"
+      <th mat-header-cell *matHeaderCellDef>Deviation</th>
+      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element) + ')'}"
           *matCellDef="let element"> {{element.rating?.rating | number : '1.2-2'}} </td>
     </ng-container>
     <ng-container matColumnDef="world_time">
