--- a/src/app/core/templates/table/table.component.html
+++ b/src/app/core/templates/table/table.component.html
@@ -21,7 +21,7 @@
       <td
         *matCellDef="let element"
         mat-cell
-        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element, 1) + ')'}"
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating, element, 1) + ')'}"
       > {{element.row1}} </td>
     </ng-container>
     <ng-container matColumnDef="row2">
@@ -29,7 +29,7 @@
       <td
         *matCellDef="let element"
         mat-cell
-        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element, 2) + ')'}"
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating, element, 2) + ')'}"
       > {{element.row2 || '-'}} </td>
     </ng-container>
     <ng-container matColumnDef="row3">
@@ -37,17 +37,23 @@
       <td
         *matCellDef="let element"
         mat-cell
-        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element, 3) + ')'}"
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating, element, 3) + ')'}"
       > {{element.row3}} </td>
-    </ng-container>
-    <ng-container matColumnDef="bot">
-      <th mat-header-cell *matHeaderCellDef>Bot Rating</th>
-      <td mat-cell *matCellDef="let element"> {{element.rating?.bot | number : '1.2-2'}} </td>
     </ng-container>
     <ng-container matColumnDef="rating">
       <th mat-header-cell *matHeaderCellDef>Deviation</th>
-      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element) + ')'}"
+      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating, element) + ')'}"
           *matCellDef="let element"> {{element.rating?.rating | number : '1.2-2'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="rating2">
+      <th mat-header-cell *matHeaderCellDef>Deviation2</th>
+      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating2, element) + ')'}"
+          *matCellDef="let element"> {{element.rating?.rating2 | number : '1.2-2'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="rating3">
+      <th mat-header-cell *matHeaderCellDef>Deviation3</th>
+      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating3, element) + ')'}"
+          *matCellDef="let element"> {{element.rating?.rating3 | number : '1.2-2'}} </td>
     </ng-container>
     <ng-container matColumnDef="world_time">
       <th mat-header-cell *matHeaderCellDef>Time</th>
