--- a/src/app/sports/basketball/basketball-live/basketball-live.component.html
+++ b/src/app/sports/basketball/basketball-live/basketball-live.component.html
@@ -8,6 +8,6 @@
     [markets]="game.markets || []"
   ></app-market-switcher>
   <div class="tables">
-    <app-table *ngFor="let market of markets" [market]="market" [signalRating]="6"></app-table>
+    <app-table *ngFor="let market of markets" [market]="market" [sport]="'basketball'" [signalRating]="6"></app-table>
   </div>
 </ng-container>
