--- a/src/app/core/templates/table/table.component.html
+++ b/src/app/core/templates/table/table.component.html
@@ -10,7 +10,7 @@
     </ng-container>
     <ng-container matColumnDef="ss">
       <th mat-header-cell *matHeaderCellDef>Score</th>
-      <td mat-cell *matCellDef="let element"> {{element.ss}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.ss[0]}}-{{element.ss[1]}} </td>
     </ng-container>
     <ng-container matColumnDef="row1">
       <th
@@ -21,15 +21,15 @@
       <td
         *matCellDef="let element"
         mat-cell
-        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating, element, 1) + ')'}"
-      > {{element.row1}} </td>
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating[0], element, 1) + ')'}"
+      > {{element.row1 || '-'}} </td>
     </ng-container>
     <ng-container matColumnDef="row2">
       <th mat-header-cell *matHeaderCellDef>{{market.rowsNames[1]}}</th>
       <td
         *matCellDef="let element"
         mat-cell
-        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating, element, 2) + ')'}"
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating[0], element, 2) + ')'}"
       > {{element.row2 || '-'}} </td>
     </ng-container>
     <ng-container matColumnDef="row3">
@@ -37,23 +37,18 @@
       <td
         *matCellDef="let element"
         mat-cell
-        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating, element, 3) + ')'}"
-      > {{element.row3}} </td>
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating[0], element, 3) + ')'}"
+      > {{element.row3 || '-'}} </td>
     </ng-container>
     <ng-container matColumnDef="rating">
       <th mat-header-cell *matHeaderCellDef>Deviation</th>
-      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating, element) + ')'}"
-          *matCellDef="let element"> {{element.rating?.rating | number : '1.2-2'}} </td>
+      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating[0], element) + ')'}"
+          *matCellDef="let element"> {{element.rating[0] | number : '1.2-2'}} </td>
     </ng-container>
     <ng-container matColumnDef="rating2">
       <th mat-header-cell *matHeaderCellDef>Deviation2</th>
-      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating2, element) + ')'}"
-          *matCellDef="let element"> {{element.rating?.rating2 | number : '1.2-2'}} </td>
-    </ng-container>
-    <ng-container matColumnDef="rating3">
-      <th mat-header-cell *matHeaderCellDef>Deviation3</th>
-      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating?.rating3, element) + ')'}"
-          *matCellDef="let element"> {{element.rating?.rating3 | number : '1.2-2'}} </td>
+      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating[1], element) + ')'}"
+          *matCellDef="let element"> {{element.rating[1] | number : '1.2-2'}} </td>
     </ng-container>
     <ng-container matColumnDef="world_time">
       <th mat-header-cell *matHeaderCellDef>Time</th>
