--- a/src/app/core/templates/market-switcher/market-switcher.component.scss
+++ b/src/app/core/templates/market-switcher/market-switcher.component.scss
@@ -18,6 +18,11 @@ mat-button-toggle-group {
   }
 }
 
+.disabled {
+  pointer-events: none;
+  opacity: 0.3;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
