--- a/src/app/sports/basketball/basketball-live/basketball-live.component.html
+++ b/src/app/sports/basketball/basketball-live/basketball-live.component.html
@@ -5,6 +5,7 @@
   <app-game-info-header [game]="game" [sport]="'basketball'"></app-game-info-header>
   <app-market-switcher
     (marketChanged)="onChangeMarket($event)"
+    [disabled]="loadingLastMarkets"
     [markets]="game.markets || []"
   ></app-market-switcher>
   <div class="tables">
