--- a/src/app/sports/basketball/basketball-list/basketball-list.component.html
+++ b/src/app/sports/basketball/basketball-list/basketball-list.component.html
@@ -12,7 +12,12 @@
   <ng-container *ngIf="games">
     <div *ngIf="games.length === 0" class="error">no games</div>
     <mat-list class="list">
-      <mat-list-item *ngFor="let game of games" (click)="openGame(game.id)">
+      <a
+        *ngFor="let game of games"
+        mat-list-item
+        [routerLink]="['game/' + game.id]"
+        [appNoLink]="false"
+      >
         <div class="game">
           <div class="time">
             <div *ngIf="this.typeOfGames == 'live'; else gameTime">
@@ -64,7 +69,7 @@
             </div>
           </ng-template>
         </div>
-      </mat-list-item>
+      </a>
     </mat-list>
   </ng-container>
 </ng-container>
