show rating 2 lines

--- a/src/app/core/templates/table/table.component.html
+++ b/src/app/core/templates/table/table.component.html
@@ -47,8 +47,14 @@
     </ng-container>
     <ng-container matColumnDef="rating2">
       <th mat-header-cell *matHeaderCellDef>Deviation2</th>
-      <td mat-cell [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating[1], element) + ')'}"
-          *matCellDef="let element"> {{element.rating[1] | number : '1.2-2'}} </td>
+      <td
+        *matCellDef="let element; let i = index"
+        mat-cell
+        [ngStyle]="{ 'background-color': ' rgba(' + getRatingColor(element.rating[1], element) + ')'}"
+        [ngClass]="{'rating2Green':rating2Green.has(i), 'rating2Red':rating2Red.has(i)}"
+      >
+        {{element.rating[1] | number : '1.2-2'}}
+      </td>
     </ng-container>
     <ng-container matColumnDef="world_time">
       <th mat-header-cell *matHeaderCellDef>Time</th>
