--- a/src/app/core/templates/table/table.component.scss
+++ b/src/app/core/templates/table/table.component.scss
@@ -1,4 +1,12 @@
 
+.rating2Green {
+  border-right: solid green;
+}
+
+.rating2Red {
+  border-left: solid #d94d4d;
+}
+
 .wrapper {
 
   margin-bottom: 30px;
