--- a/src/app/core/templates/games-statuses-panel/games-statuses-panel.component.html
+++ b/src/app/core/templates/games-statuses-panel/games-statuses-panel.component.html
@@ -23,4 +23,5 @@
       FINISHED
     </mat-button-toggle>
   </mat-button-toggle-group>
+  <app-search-item *ngIf="searchData" [searchItem]="searchData"></app-search-item>
 </div>
