--- a/src/app/core/templates/search-item/search-item.component.html
+++ b/src/app/core/templates/search-item/search-item.component.html
@@ -1,7 +1,8 @@
 <div class="wrapper">
-  <p>{{searchItem}}</p>
+  <p>{{searchItem.searchValue}}</p>
   <button
     mat-icon-button
+    class="small-icon-button"
     color="warn"
     aria-label="Example icon button with a heart icon"
     (click)="clear()"
