--- a/src/app/core/templates/search-item/search-item.component.scss
+++ b/src/app/core/templates/search-item/search-item.component.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   padding-left: 15px;
-  margin: auto 0;
+  margin: 10px;
   background: #ddddff;
   border-radius: 16px;
   height: 30px;
@@ -12,8 +12,20 @@
     margin: auto;
   }
 
-  button {
-    transform: scale(0.5);
-    margin: auto 0;
+  .small-icon-button {
+    margin: auto 3px;
+    width: 24px !important;
+    height: 24px !important;
+    line-height: 24px !important;
+
+    .mat-icon {
+      width: 16px !important;
+      height: 16px !important;
+      line-height: 16px !important;
+    }
+
+    .material-icons {
+      font-size: 16px !important;
+    }
   }
 }
