--- a/src/app/sports/basketball/basketball-list/basketball-list.component.html
+++ b/src/app/sports/basketball/basketball-list/basketball-list.component.html
@@ -1,13 +1,15 @@
-<app-games-statuses-panel
-  [sport]="'basketball'"
-></app-games-statuses-panel>
-<mat-paginator
-  aria-label="Select page"
-  [length]="countOfGames"
-  [pageSize]="perPage"
-  (page)="nextPage($event)"
->
-</mat-paginator>
+<div class="header-wrapper">
+  <app-games-statuses-panel
+    [sport]="'basketball'"
+  ></app-games-statuses-panel>
+  <mat-paginator
+    aria-label="Select page"
+    [length]="countOfGames"
+    [pageSize]="perPage"
+    (page)="nextPage($event)"
+  >
+  </mat-paginator>
+</div>
 <ng-container *ngIf="!loading; else loadingTemp">
   <ng-container *ngIf="games">
     <div *ngIf="games.length === 0" class="error">no games</div>
