--- a/src/app/sports/football/football-list/football-list.component.scss
+++ b/src/app/sports/football/football-list/football-list.component.scss
@@ -7,24 +7,26 @@ mat-button-toggle-group, mat-progress-spinner {
   margin: 10px auto;
 }
 
-.search-items {
+.header-wrapper {
   display: flex;
-  justify-content: space-between;
-  margin-top: -52px;
 
   mat-paginator {
+    position: fixed;
+    right: 0;
     margin-left: auto;
+  }
+
+  app-games-statuses-panel {
+    position: relative;
+    margin: 0 auto;
   }
 
   @media screen and (max-width: 1080px) {
     margin-top: 0;
-    app-search-item {
-      margin: auto 0;
-      max-width: 50%;
-    }
+    display: flex;
+    flex-direction: column;
     mat-paginator {
-      min-width: 50%;
-      margin-left: auto;
+      position: relative;
     }
   }
 
@@ -36,9 +38,6 @@ mat-button-toggle-group, mat-progress-spinner {
 .list, .error {
   margin: 0 20%;
   padding-bottom: 20px;
-  @media screen and (max-width: 1400px) {
-    margin: 10px 10%;
-  }
   @media screen and (max-width: 1080px) {
     margin: 10px 0;
   }
@@ -140,4 +139,5 @@ mat-spinner {
   margin: 10px auto;
   color: var(--text-color);
 }
+
 
